Adding_Proj_File

--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgres://avnadmin:AVNS_L2h8FZCjc0f8oEa3J_d@pg-3d826b00-venkatsaikedarinath-6782.a.aivencloud.com:26733/defaultdb?sslmode=require"
+DATABASE_URL=""
