--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgres://avnadmin:AVNS_L2h8FZCjc0f8oEa3J_d@pg-3d826b00-venkatsaikedarinath-6782.a.aivencloud.com:26733/defaultdb?sslmode=require"
+DATABASE_URL="your_db_url"
